MaNGOS 0.8    (??? ??, 2006) https://svn.mangosproject.org/trac/MaNGOS/milestone/0.8

 MaNGOS 0.8  -adds further improvements to the
 server core as well as to the majority of game classes and the game content
 database.

 ==== Game Features ====
 *

 ==== Server Features ====
 * 

 * Fixed Bugs: ???
 * Total number of changes: ???

 The complete list of closed tickets can be found here:
   https://svn.mangosproject.org/trac/MaNGOS/query?status=closed&milestone=0.8


MaNGOS 0.7    (Jul 9, 2007) https://svn.mangosproject.org/trac/MaNGOS/milestone/0.7

 MaNGOS 0.7 - Codename "Eye of the Storm" -adds further improvements to the
 server core as well as to the majority of game classes and the game content
 database.

==== Game Features ====
 * Fixed: random item enchantment display in the auction/mail/group loot dialogs. The item properties are also properly applied to the items at creation.
 * Added: support for opening gameobjects/items using their specific keys. Implemented key requirements for entering instances.
 * Added: a threat based aggro system along with threat bonuses from spells.
 * Implemented many additional spell effects and auras. The spell system is one step closer to completeness.
 * Improved: creature/player hostility checks using more accurate faction hostility data. Hostility is checked when casting spells including area-of-effect spells.
 * Fixed: parry/dodge related code.
 * Improved rage generation formula on blocked attacks/armor reduction etc.
 * Fixed: creature movement problems after creature stun/roots and creature orientation in some cases.
 * Fixed: some small problems in the player inventory system.
 * Added: support for all resurrection methods for various classes. Resurrection from corpse is also implemented.
 * Fixed: showing cooldown for items and spells, server side check and saving to the database is also implemented.
 * Added: support for gift creation.
 * Improved: the pet system and more improvements will follow in next release.