@@ -437,6 +437,10 @@ pkgdata_DATA = \
 	4425_character.sql \
 	4426_creature_template.sql \
 	4430_spell_proc_event.sql \
+	4432_item_template.sql \
+	4434_spell_proc_event.sql \
+	4432_spell_chain.sql \
+	4432_spell_proc_event.sql \
 	README
 
 ## Additional files to include when running 'make dist'
@@ -854,4 +858,8 @@ EXTRA_DIST = \
 	4425_character.sql \
 	4426_creature_template.sql \
 	4430_spell_proc_event.sql \
+	4432_item_template.sql \
+	4434_spell_proc_event.sql \
+	4432_spell_chain.sql \
+	4432_spell_proc_event.sql \
 	README
